--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,7 +3,9 @@
     <style name="Base.Theme.ProjectDummySecond" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="android:statusBarColor" tools:targetApi="l">@color/black</item>
     </style>
 
     <style name="Theme.ProjectDummySecond" parent="Base.Theme.ProjectDummySecond" />
+
 </resources>
